css/projects: fix subtitle dash on small screens

--- a/css/projects.scss
+++ b/css/projects.scss
@@ -107,8 +107,10 @@
 	font-style: italic;
 	font-size: 1.3rem;
 
-	&:before {
-		content: "\2014";
+	@media (min-width: 768px) {
+		&:before {
+			content: "\2014";
+		}
 	}
 }
 .project-technology {
